# Unisys_U3_ForbiddenPhishers

./: README.md
client/: package-lock.json  package.json
client/src/: index.css  main.tsx  router.tsx
client/src/api/: authService.ts
client/src/components/Auth/: SocialButtons.tsx
client/src/components/Footer/: Footer.tsx
client/src/components/Navbar/: Navbar.tsx
client/src/components/ProtectedRoute/: ProtectedRoute.tsx
client/src/components/embed-popup/: action-bar.tsx  agent-client.tsx  error-message.tsx  popup-view.tsx  transcript.tsx  trigger.tsx
client/src/config/: axiosInstance.ts  backendUrl.ts
client/src/hooks/: use-connection-details.ts
client/src/layout/: Mainlayout.tsx  RootWrapper.tsx
client/src/lib/: api.ts  pdfExport.ts  store.ts  types.ts
client/src/validation/: userSchema.ts
python-server/: .env.example  README.md  main.py  pyproject.toml  voice_agent.py
python-server/src/: __init__.py  auth.py  database.py  graph.py
python-server/src/agents/: __init__.py  base.py  career_matcher.py  dashboard_formatter.py  financial_advisor.py  gap_analyst.py  market_scout.py  profile_parser.py  risk_assessor.py  timeline_simulator.py
python-server/src/models/: __init__.py  career_profile.py  state.py
server/: package-lock.json  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: app.ts  client.ts  server.ts
server/src/auth/: authController.ts
server/src/helpers/: data.ts  socialLogin.ts
server/src/routes/: industryInsights.ts
server/src/types/: authType.ts
server/src/utils/: generateTokens.ts  s3Upload.ts
(+12 files in other folders)
